--- a/Securalia/nbproject/private/private.properties
+++ b/Securalia/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.sqlite-jdbc-3.42.0.0.jar=C:\\Users\\luisc\\Downloads\\sqlite-jdbc-3.42.0.0.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\luisc\\AppData\\Roaming\\NetBeans\\23\\build.properties
