--- a/Securalia/nbproject/project.properties
+++ b/Securalia/nbproject/project.properties
@@ -1,9 +1,12 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=Proyecto Securalia - Acceso  a Datos 2\u00ba DAM
+application.title=Securalia
+application.vendor=Luis Carlos Caicedo Giraldo
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +35,7 @@ dist.jar=${dist.dir}/Securalia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Securalia
+endorsed.classpath=
 excludes=
 file.reference.sqlite-jdbc-3.42.0.0.jar=C:\\Users\\luisc\\Downloads\\sqlite-jdbc-3.42.0.0.jar
 includes=**
@@ -57,7 +61,7 @@ javac.test.modulepath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.html5=false
 javadoc.noindex=false
