--- a/SecuraliaBackups/nbproject/project.properties
+++ b/SecuraliaBackups/nbproject/project.properties
@@ -1,9 +1,12 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=Proyecto Securalia - Acceso a  Datos 2\u00ba DAM
+application.title=SecuraliaBackups
+application.vendor=Luis Carlos Caicedo Giraldo
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +35,7 @@ dist.jar=${dist.dir}/SecuraliaBackups.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SecuraliaBackups
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\luisc\\Downloads\\mysql-connector-j-9.1.0.jar
 includes=**
