--- a/SecuraliaBackups/nbproject/private/private.properties
+++ b/SecuraliaBackups/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\luisc\\Downloads\\sqlite-jdbc-3.42.0.0.jar
+file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\luisc\\Data\\java_dependencies\\sqlite-jdbc-3.42.0.0.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
